--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to GitHub Pages
+name: Deploy Static Site (Case-Sensitive Support)
 
 on:
   push:
@@ -10,7 +10,7 @@ permissions:
   id-token: write
 
 jobs:
-  build-and-deploy:
+  deploy:
     runs-on: ubuntu-latest
     environment:
       name: github-pages
@@ -20,10 +20,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Verify files
+      # Add Jekyll config to recognize Index.html (capital I)
+      - name: Create case-sensitive config
         run: |
-          ls -la
-          echo "Static files verified!"
+          echo "include: [Index.html]" > _config.yml
+          echo "Created _config.yml for case sensitivity"
+
+      # Verify files (debugging)
+      - name: List files
+        run: ls -la
 
       - name: Setup Pages
         uses: actions/configure-pages@v3
@@ -31,7 +36,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: "." # Change to 'dist/' if using a build folder
+          path: "." # Includes all files (both Index.html and _config.yml)
 
       - name: Deploy to GitHub Pages
         id: deployment
