--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
       # 3. Set up GitHub Pages
       - uses: actions/configure-pages@v3
 
-      # 4. Upload files (correct modern action)
+      # 4. Upload files to Pages
       - uses: actions/upload-pages-artifact@v2
         with:
           path: "."
